--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,1 @@
-[[redirects]]
-  from = "/*"
-  to = "https://albertinroby-avocat.fr/:splat"
-  status = 301
-  force = true
+# File can be deleted or left empty
