--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,7 @@
 # File can be deleted or left empty
+
+[[redirects]]
+  from = "https://albertinroby-avocat.netlify.app/*"
+  to = "https://albertinroby-avocat.fr/:splat"
+  status = 301
+  force = true
